# MHNG_LQR

./: .gitignore  CMakeLists.txt  MHNG_LQR.sln  MHNG_LQR.vcxproj  MHNG_math.cpp  MHNG_math.h  README.md  file_operations.cpp  file_operations.h  main.cpp  typedefs.h
